@@ -94,31 +94,26 @@ public class FireFliesTest {
         var foundation = Foundation.newBuilder();
         identities.keySet().forEach(d -> foundation.addMembership(d.toDigeste()));
         var sealed = FoundationSeal.newBuilder().setFoundation(foundation).build();
-        TransactionConfiguration txnConfig = new TransactionConfiguration(Executors.newFixedThreadPool(2,
-                                                                                                       Thread.ofVirtual()
-                                                                                                             .factory()),
-                                                                          Executors.newSingleThreadScheduledExecutor(Thread.ofVirtual()
-                                                                                                                           .factory()));
+        TransactionConfiguration txnConfig = new TransactionConfiguration(Executors.newFixedThreadPool(1,
+                                                                                                       Utils.virtualThreadFactory()),
+                                                                          Executors.newSingleThreadScheduledExecutor(Utils.virtualThreadFactory()));
         identities.forEach((digest, id) -> {
             var context = new ContextImpl<>(DigestAlgorithm.DEFAULT.getLast(), CARDINALITY, 0.2, 3);
             final var member = new ControlledIdentifierMember(id);
             var localRouter = new LocalServer(prefix, member,
-                                              Executors.newFixedThreadPool(5, Thread.ofVirtual().factory()))
+                                              Executors.newFixedThreadPool(2, Utils.virtualThreadFactory()))
                                                                                                             .router(ServerConnectionCache.newBuilder()
                                                                                                                                          .setTarget(30),
                                                                                                                     Executors.newFixedThreadPool(5,
-                                                                                                                                                 Thread.ofVirtual()
-                                                                                                                                                       .factory()));
+                                                                                                                                                 Utils.virtualThreadFactory()));
             var node = new ProcessDomain(group, member, params, "jdbc:h2:mem:", checkpointDirBase,
                                          RuntimeParameters.newBuilder()
                                                           .setFoundation(sealed)
-                                                          .setScheduler(Executors.newScheduledThreadPool(5,
-                                                                                                         Thread.ofVirtual()
-                                                                                                               .factory()))
+                                                          .setScheduler(Executors.newScheduledThreadPool(2,
+                                                                                                         Utils.virtualThreadFactory()))
                                                           .setContext(context)
-                                                          .setExec(Executors.newFixedThreadPool(5,
-                                                                                                Thread.ofVirtual()
-                                                                                                      .factory()))
+                                                          .setExec(Executors.newFixedThreadPool(10,
+                                                                                                Utils.virtualThreadFactory()))
                                                           .setCommunications(localRouter),
                                          new InetSocketAddress(0), ffParams, txnConfig);
             domains.add(node);
@@ -152,14 +147,14 @@ public class FireFliesTest {
         domains.get(0)
                .getFoundation()
                .start(() -> started.get().countDown(), gossipDuration, Collections.emptyList(),
-                      Executors.newScheduledThreadPool(5, Thread.ofVirtual().factory()));
+                      Executors.newScheduledThreadPool(5, Utils.virtualThreadFactory())));
         assertTrue(started.get().await(10, TimeUnit.SECONDS), "Cannot start up kernel");
 
         started.set(new CountDownLatch(CARDINALITY - 1));
         domains.subList(1, domains.size()).forEach(d -> {
             d.getFoundation()
              .start(() -> started.get().countDown(), gossipDuration, seeds,
-                    Executors.newScheduledThreadPool(5, Thread.ofVirtual().factory()));
+                    Executors.newScheduledThreadPool(1, Utils.virtualThreadFactory()));
         });
         assertTrue(started.get().await(10, TimeUnit.SECONDS), "could not start views");
 
